samples/_failures_safe/1761149739_2658fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1284e9a.c: In function ‘get_operation’:
./samples/SAFE/__tmp_d1284e9a.c:130:27: error: expected ‘)’ at end of input
  130 |     return (enum Operation
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_d1284e9a.c:130:18: error: expected declaration or statement at end of input
  130 |     return (enum Operation
      |                  ^~~~~~~~~
